--- a/angular.json
+++ b/angular.json
@@ -30,11 +30,13 @@
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.css",
               "node_modules/material-design-icons/iconfont/material-icons.css",
+              "node_modules/sweetalert2/dist/sweetalert2.min.css",
               "src/styles.scss"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
-              "node_modules/bootstrap/dist/js/bootstrap.min.js"
+              "node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "node_modules/sweetalert2/dist/sweetalert2.all.min.js"
             ]
           },
           "configurations": {
