--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jquery": "^3.5.1",
     "material-design-icons": "^3.0.1",
     "rxjs": "~6.5.4",
+    "sweetalert2": "^10.15.5",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
